# song_analyzer_windsurf

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  IMPROVEMENTS.md  README.md  REFACTORING_SUMMARY.md  TECHNICAL_DESIGN_DOCUMENT.md  TECHNICAL_DESIGN_EXTENDED.md  WORKFLOWS.md  pyproject.toml  requirements.txt  test_rhcp_analysis.py
.claude/: settings.local.json
.github/workflows/: claude.yml
docs/: ARCHITECTURE.md  WORK_PLAN.md
examples/: c_major_scale.mid
src/: __init__.py  audio_loader.py  cli.py  exporter.py  postprocess.py
src/analysis/: __init__.py  features.py  pitch.py  tempo.py
src/core/: __init__.py  constants.py  note.py
src/inference/: __init__.py  chords.py  harmony.py  key.py  melody.py  resilience.py  structure.py
src/input/: __init__.py  loader.py  youtube.py
src/output/: __init__.py  midi.py  musicxml.py
src/processing/: __init__.py  cleanup.py  quantize.py
src/separation/: __init__.py  demucs_separator.py  instrument_classifier.py
src/transcriber/: __init__.py  base.py  monophonic.py  polyphonic.py
src/transcription/: __init__.py  base.py  monophonic.py  multi_instrument.py  polyphonic.py
tests/: __init__.py  generate_test_audio.py  test_cleanup.py  test_harmony_inference.py  test_multi_instrument.py  test_noise_rejection.py  test_transcriber.py
tests/benchmarks/: __init__.py  baselines.json  bench_framework.py  bench_transcription.py
tests/fixtures/: generate_fixtures.py
