[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "song-analyzer"
version = "0.1.0"
description = "Audio to Sheet Music Transcription System"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "pydub>=0.25.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pretty_midi>=0.2.10",
    "mido>=1.3.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
song-analyzer = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
